--- a/automation/livingroom.yaml
+++ b/automation/livingroom.yaml
@@ -1,25 +1,4 @@
-- id: '1552440982530'
-  alias: Office light on
-  trigger:
-  - entity_id: sensor.office_switch
-    platform: state
-    to: 1_click_up
-  condition: []
-  action:
-  - entity_id: switch.speaker
-    service: switch.turn_on
-- id: '1552441520358'
-  alias: Office light off
-  trigger:
-  - entity_id: sensor.office_switch
-    platform: state
-    to: 4_click_up
-  condition: []
-  action:
-  - entity_id: switch.speaker
-    service: switch.turn_off
-- id: '1554010885976'
-  alias: Day
+- alias: Day
   trigger:
   - event: sunrise
     platform: sun
@@ -30,8 +9,7 @@
       entity_id: light.family_room_strip
     entity_id: light.family_room_strip
     service: light.turn_on
-- id: '1554010916238'
-  alias: Night
+- alias: Night
   trigger:
   - event: sunset
     platform: sun
@@ -42,8 +20,7 @@
       entity_id: light.family_room_strip
     entity_id: light.family_room_strip
     service: light.turn_on
-- id: '1554521733809'
-  alias: Living Room Click 4
+- alias: Living Room Click 4
   trigger:
   - entity_id: sensor.living_room_switch
     platform: state
@@ -53,8 +30,7 @@
   - service: scene.turn_on
     data:
       entity_id: scene.turn_off
-- id: '1554521870156'
-  alias: Living Room Click 3
+- alias: Living Room Click 3
   trigger:
   - entity_id: sensor.living_room_switch
     platform: state
@@ -64,8 +40,7 @@
   - service: scene.turn_on
     data:
       entity_id: scene.night_mode
-- id: '1554545900969'
-  alias: Living Room Click 1
+- alias: Living Room Click 1
   trigger:
   - entity_id: sensor.living_room_switch
     platform: state
@@ -75,8 +50,7 @@
   - service: scene.turn_on
     data:
       entity_id: scene.normal
-- id: '1554589378143'
-  alias: Living Room Click 2
+- alias: Living Room Click 2
   trigger:
   - entity_id: sensor.living_room_switch
     platform: state
