--- a/configuration.yaml
+++ b/configuration.yaml
@@ -142,6 +142,6 @@ google_assistant: !include google.yaml
 zone: !include zone.yaml
 group: !include groups.yaml
 scene: !include scene.yaml
-automation: !include automations.yaml
+automation: !include_dir_merge_list automation
 script: !include scripts.yaml
 switch: !include ptz.yaml
