--- a/automation/livingroom.yaml
+++ b/automation/livingroom.yaml
@@ -20,26 +20,7 @@
       entity_id: light.family_room_strip
     entity_id: light.family_room_strip
     service: light.turn_on
-- alias: Living Room Click 4
-  trigger:
-  - entity_id: sensor.living_room_switch
-    platform: state
-    to: 4_click_up
-  condition: []
-  action:
-  - service: scene.turn_on
-    data:
-      entity_id: scene.turn_off
-- alias: Living Room Click 3
-  trigger:
-  - entity_id: sensor.living_room_switch
-    platform: state
-    to: 3_click_up
-  condition: []
-  action:
-  - service: scene.turn_on
-    data:
-      entity_id: scene.night_mode
+
 - alias: Living Room Click 1
   trigger:
   - entity_id: sensor.living_room_switch
@@ -47,9 +28,10 @@
     to: 1_click_up
   condition: []
   action:
-  - service: scene.turn_on
+  - service: input_select.select_option
     data:
-      entity_id: scene.normal
+      entity_id: input_select.livingroom_preset
+      option: "Normal"
 - alias: Living Room Click 2
   trigger:
   - entity_id: sensor.living_room_switch
@@ -57,6 +39,62 @@
     to: 2_click_up
   condition: []
   action:
-  - service: scene.turn_on
+  - service: input_select.select_option
     data:
-      entity_id: scene.movies
+      entity_id: input_select.livingroom_preset
+      option: "Movies"
+- alias: Living Room Click 3
+  trigger:
+  - entity_id: sensor.living_room_switch
+    platform: state
+    to: 3_click_up
+  condition: []
+  action:
+  - service: input_select.select_option
+    data:
+      entity_id: input_select.livingroom_preset
+      option: "Night"
+- alias: Living Room Click 4
+  trigger:
+  - entity_id: sensor.living_room_switch
+    platform: state
+    to: 4_click_up
+  condition: []
+  action:
+  - service: input_select.select_option
+    data:
+      entity_id: input_select.livingroom_preset
+      option: "Turn Off"
+
+- alias: Living Room Normal selected
+  trigger:
+    platform: state
+    entity_id: input_select.livingroom_preset
+    to: "Normal"
+  action:
+    service: scene.turn_on
+    entity_id: scene.normal
+- alias: Living Room Movie selected
+  trigger:
+    platform: state
+    entity_id: input_select.livingroom_preset
+    to: "Movie"
+  action:
+    service: scene.turn_on
+    entity_id: scene.movie
+- alias: Living Room Night selected
+  trigger:
+    platform: state
+    entity_id: input_select.livingroom_preset
+    to: "Night"
+  action:
+    service: scene.turn_on
+    entity_id: scene.night
+- alias: Living Room Turn Off selected
+  trigger:
+    platform: state
+    entity_id: input_select.livingroom_preset
+    to: "Turn Off"
+  action:
+    service: scene.turn_on
+    entity_id: scene.turn_off
