--- a/sensors.yaml
+++ b/sensors.yaml
@@ -18,3 +18,9 @@
       value_template: '{{ states.switch.entertainment_unit.attributes["current_power_w"] }}'
       unit_of_measurement: 'W'
       friendly_name: "TV Power Usage"
+- platform: filter
+  name: "House Power"
+  entity_id: sensor.energy_usage
+  filters:
+    - filter: range
+      upper_bound: 1200
