--- a/configuration.yaml
+++ b/configuration.yaml
@@ -92,7 +92,7 @@ google_assistant: !include google.yaml
 zone: !include zone.yaml
 automation: !include_dir_merge_list automation
 script: !include scripts.yaml
-switch: !include ptz.yaml
+switch: !include switches.yaml
 device_tracker: !include device_tracker.yaml
 scene: !include scene.yaml
 group: !include groups.yaml
