Make the buttons control master switches which set the groups on/off rather than toggle (as toggling causes each individual light to be toggled and so the room never turns off if only part is on)

--- a/automation/livingroom.yaml
+++ b/automation/livingroom.yaml
@@ -42,7 +42,7 @@
   - service: input_select.select_option
     data:
       entity_id: input_select.livingroom_preset
-      option: "Movies"
+      option: "Movie"
 - alias: Living Room Click 3
   trigger:
   - entity_id: sensor.living_room_switch
