--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,6 +7,9 @@ homeassistant:
   time_zone: Australia/Sydney
   customize: !include customize.yaml
 
+frontend:
+  themes: !include themes.yaml
+
 config:
 discovery:
 conversation:
@@ -33,11 +36,17 @@ weather:
   - platform: bom
     station: IDN60901.94782
 
-panel_iframe:
-  configurator:
-    title: Configurator
-    icon: mdi:wrench
-    url: https://home.adebenham.com:3218
+panel_custom:
+  - name: hassio-main
+    sidebar_title: Configurator
+    sidebar_icon: hass:settings
+    js_url: /api/hassio/app/entrypoint.js
+    url_path: configurator
+    embed_iframe: true
+    require_admin: true
+    config:
+      ingress: core_configurator
+
 
     
 # Text to speech
