--- a/esphome/camera1.yaml
+++ b/esphome/camera1.yaml
@@ -13,9 +13,6 @@ api:
 
 ota:
 
-web_server:
-  port: 80
-
 esp32_camera:
   external_clock:
     pin: GPIO0
@@ -29,3 +26,4 @@ esp32_camera:
   pixel_clock_pin: GPIO22
   power_down_pin: GPIO32
   name: My Camera
+  resolution: 800x600
