--- a/automation/office.yaml
+++ b/automation/office.yaml
@@ -5,7 +5,7 @@
     to: 1_click_up
   condition: []
   action:
-  - entity_id: switch.speaker
+  - entity_id: switch.office_speaker
     service: switch.turn_on
 - alias: Office light off
   trigger:
@@ -14,5 +14,5 @@
     to: 4_click_up
   condition: []
   action:
-  - entity_id: switch.speaker
+  - entity_id: switch.office_speaker
     service: switch.turn_off
