--- a/configuration.yaml
+++ b/configuration.yaml
@@ -8,7 +8,7 @@ homeassistant:
   customize: !include customize.yaml
 
 frontend:
-  themes: !include themes.yaml
+  themes: !include_dir_merge_named themes/
 
 config:
 discovery:
@@ -38,14 +38,14 @@ weather:
 
 panel_custom:
   - name: hassio-main
-    sidebar_title: Configurator
+    sidebar_title: VSCode
     sidebar_icon: hass:settings
     js_url: /api/hassio/app/entrypoint.js
     url_path: configurator
     embed_iframe: true
     require_admin: true
     config:
-      ingress: core_configurator
+      ingress: a0d7b954_vscode
 
 
     
