--- a/esphome/officespeaker.yaml
+++ b/esphome/officespeaker.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: sonoff1
+  name: officespeaker
   platform: ESP8266
   board: esp01_1m
   
@@ -19,13 +19,13 @@ binary_sensor:
       number: GPIO0
       mode: INPUT_PULLUP
       inverted: True
-    name: "Sonoff Basic Button"
+    name: "Office Speaker Button"
     on_press:
       - switch.toggle: relay
 
 switch:
   - platform: gpio
-    name: "Sonoff Basic Relay"
+    name: "Office Speaker"
     pin: GPIO12
     id: relay
     inverted: no
