Change camera platform

--- a/camera.yaml
+++ b/camera.yaml
@@ -3,5 +3,6 @@
   mjpeg_url: http://192.168.0.232/media?action=stream&user=admin&pwd=
   still_image_url: http://192.168.0.232/snapshot.cgi?user=admin&pwd=
   verify_ssl: false
-- platform: onvif
-  host: 192.168.0.190
+- platform: ffmpeg
+  input: rtsp://192.168.0.210:554/
+  name: camera2
