--- a/custom_updater.yaml
+++ b/custom_updater.yaml
@@ -8,3 +8,5 @@ component_urls:
   - https://raw.githubusercontent.com/robmarkcole/Hue-sensors-HASS/master/custom_updater.json
 python_script_urls:
   - https://raw.githubusercontent.com/pnbrucker/homeassistant-config/master/python_scripts.json
+card_urls:
+    - https://raw.githubusercontent.com/kalkih/mini-media-player/master/tracker.json
