--- a/automation/frontyard.yaml
+++ b/automation/frontyard.yaml
@@ -4,6 +4,14 @@
       entity_id:  binary_sensor.hue_motion_sensor_1_motion
       to: 'on'
   condition:
+    condition: or
+    conditions:
+      - condition: sun
+        after: sunset
+        after_offset: "-1:00:00"
+      - condition: sun
+        before: sunrise
+        before_offset: "1:00:00"  
   action:
     service: light.turn_on
     entity_id:  light.sensor_light
