--- a/esphome/lightstrip2.yaml
+++ b/esphome/lightstrip2.yaml
@@ -17,7 +17,7 @@ esphome:
          effect: "Random Twinkle"
 
 wifi:
-  ssid: "office"
+  ssid: "virus"
   password: !secret wifi_password
 
 # Enable logging
