Add two new kogan bulbs and setup automations to use ids

--- a/automation/bedroom.yaml
+++ b/automation/bedroom.yaml
@@ -1,4 +1,5 @@
-- alias: Kids Lights
+- id: kids_lights
+  alias: Kids Lights
   trigger:
     - platform: state
       entity_id: group.lucas_bedroom_lights
