--- a/esphome/hallbulb.yaml
+++ b/esphome/hallbulb.yaml
@@ -1,11 +1,11 @@
 esphome:
-  name: bulb1
+  name: hallbulb
   platform: ESP8266
   board: esp01_1m
 
 
 wifi:
-  ssid: 'malware-24'
+  ssid: 'virus'
   password: !secret wifi_password
 
 logger:
@@ -25,8 +25,8 @@ light:
     data_pin: GPIO14
     clock_pin: GPIO04
     num_leds: 8
-    name: "Bulb Colour"
+    name: "Hall Colour"
   - platform: monochromatic
-    name: "Bulb White"
+    name: "Hall White"
     output: IO1
     
