--- a/automation/frontyard.yaml
+++ b/automation/frontyard.yaml
@@ -15,7 +15,9 @@
         before_offset: "1:00:00"  
   action:
     service: light.turn_on
-    entity_id:  light.sensor_light
+    data:
+      entity_id:  light.sensor_light
+      transition: 0
 - id: door_motion_off
   alias: Door Motion off
   trigger:
@@ -25,4 +27,6 @@
   condition:
   action:
     service: light.turn_off
-    entity_id:  light.sensor_light
+    data:
+      entity_id:  light.sensor_light
+      transition: 0
