--- a/recorder.yaml
+++ b/recorder.yaml
@@ -7,6 +7,7 @@ exclude:
     - automation
     - persistent_notification
     - camera
+    - switch
   entities:
     - sensor.date
     - sensor.time
